--- a/lab9/npm/my-app/src/App.css
+++ b/lab9/npm/my-app/src/App.css
@@ -9,3 +9,12 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+footer {
+  margin-top: auto;
+  padding: 20px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+
